2018-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci/Dockerfile: Moved Dockerfile to docker/ci/

2018-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* docker/Dockerfile: Adding Dockerfile for Travis CI use

	* .travis.yml: Run using Docker container

2018-05-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/inline.R.in (inlineCxxPlugin): Use OpenMP where available

	* src/linearRegression.cpp: Added example
	* man/linearRegression.Rd: Idem

	* README.md: Mention mlpack 3.0.1 as well

2018-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/linearRegression.cpp (linearRegression): Another set of
	transpose updates

2018-05-28  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Now also checks for OpenMP (for MLPACK 3.0.*)
	* configire: Idem
	* src/Makevars: Use $(SHLIB_OPENMP_CXXFLAGS) if available

	* src/LARS.cpp (LARS): Predict() now wants a rowvector; and Train()
	needs a transpose
	* src/linearRegression.cpp (linearRegression): Idem on rowvector
	* src/logisticRegression.cpp (logisticRegression): Result is now a
	rowvector

	* .travis.yml: Use ubuntu-toolchain-r PPA for gcc-7 / g++-7

2018-02-18  Dirk Eddelbuettel  <edd@debian.org>

	* data/lars.RData: New data set from MLPACK
	* rawdata/lars_dependent_x.csv: X data, limited rank matrix
	* rawdata/lars_dependent_y.csv: Y colum
	* rawdata/lars_data.r: Processing
	* R/data.R: Documentation
	* man/lars_dependent_x.Rd: Idem
	* man/lars_dependent_y.Rd: Idem

2018-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* src/LARS.cpp (LARS): Change interface to have training set as
	optional last parameter; retun list with several result elements

2018-02-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/LARS.cpp: Completed roxygen docs of variables, added simple
	example
	* man/LARS.Rd: Idem

	* inst/include/RcppMLPACK.h: Define ARMA_COUT_STREAM and
	ARMA_CERR_STREAM instead of the deprecated ARMA_DEFAULT_OSTREAM

	* src/init.c: Removed, now auto-generated in RcppExports.cpp
	* src/RcppExports.cpp: Regenerated